# CYLogger

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_zh.md  Version.txt  test_basic.cpp  test_simple.cpp
Example/: CMakeLists.txt  CMakeLists_simple.txt  simple_example.cpp  simple_logger_test.cpp
Example/CYLoggerConsoleTest/: CMakeLists.txt  CYLoggerConsoleTest.cpp  CYLoggerConsoleTest.vcxproj  CYLoggerConsoleTest.vcxproj.filters
Example/CYLoggerSimpleTest/: CMakeLists.txt  CYLoggerSimpleTest.cpp
Example/CYLoggerTest/: CMakeLists.txt  CYLoggerTest.aps  CYLoggerTest.cpp  CYLoggerTest.h  CYLoggerTest.rc  CYLoggerTest.vcxproj  CYLoggerTest.vcxproj.filters  CYLoggerTestDlg.cpp  CYLoggerTestDlg.h  framework.h  resource.h
Example/CYLoggerTest/res/: CYLoggerTest.rc2
Example/CYLoggerTest/x64/Debug/: CYLoggerTest.exe.recipe  CYLoggerTest.res  vc143.idb
Example/CYLoggerTest/x64/Debug/CYLoggerTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CYLoggerTest.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Example/CYLoggerTest/x64/Release/: CYLoggerTest.exe.recipe  CYLoggerTest.ipdb  CYLoggerTest.res
Example/CYLoggerTest/x64/Release/CYLoggerTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CYLoggerTest.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  link.write.2u.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
Inc/: ICYLogger.hpp  ICYLoggerDefine.hpp  ICYLoggerPatternFilter.hpp  ICYLoggerTemplateLayout.hpp
Src/: CMakeLists.txt  CYLoggerControl.cpp  CYLoggerControl.hpp  CYLoggerImpl.cpp  CYLoggerImpl.hpp
Src/Common/: CYFPSCounter.cpp  CYFPSCounter.hpp  CYFileRestriction.cpp  CYFileRestriction.hpp  CYFormatDefine.hpp  CYJThreadDefine.hpp  CYNoCopy.hpp  CYPathConvert.cpp  CYPathConvert.hpp  CYPrivateDefine.hpp  CYPublicFunction.cpp  CYPublicFunction.hpp
Src/Common/Encryption/: CYBaseEncryption.cpp  CYBaseEncryption.hpp  CYEncryptionFactory.cpp  CYEncryptionFactory.hpp
Src/Common/Exception/: CYExceptionDefine.hpp  CYExceptionLogFile.cpp  CYExceptionLogFile.hpp
Src/Common/Message/: CYEscapeMessage.cpp  CYEscapeMessage.hpp  CYNormalMessage.cpp  CYNormalMessage.hpp  CYStrMessage.cpp  CYStrMessage.hpp
Src/Common/SimpleLog/: CYSimpleLog.cpp  CYSimpleLog.hpp
Src/Common/Thread/: CYNamedCondition.cpp  CYNamedCondition.hpp  CYNamedLocker.cpp  CYNamedLocker.hpp  CYNamedThread.cpp  CYNamedThread.hpp
Src/Common/Time/: CYTimeElapsed.hpp  CYTimeUtils.hpp
Src/Common/UpLoad/: CYBaseUpLoad.cpp  CYBaseUpLoad.hpp  CYFTPUpLoad.cpp  CYFTPUpLoad.hpp  CYUpLoadFactory.cpp  CYUpLoadFactory.hpp
Src/Config/: CYLoggerConfig.cpp  CYLoggerConfig.hpp
Src/Entity/: CYLoggerEntity.hpp  CYLoggerEntityFactory.cpp  CYLoggerEntityFactory.hpp
Src/Entity/Appender/: CYLoggerAppenderDefine.hpp  CYLoggerAppenderFactory.cpp  CYLoggerAppenderFactory.hpp  CYLoggerBaseAppender.cpp  CYLoggerBaseAppender.hpp  CYLoggerBufferAppender.cpp  CYLoggerBufferAppender.hpp  CYLoggerConsoleAppender.cpp  CYLoggerConsoleAppender.hpp  CYLoggerFileAppender.cpp  CYLoggerFileAppender.hpp  CYLoggerMainAppender.cpp  CYLoggerMainAppender.hpp  CYLoggerRemoteAppender.cpp  CYLoggerRemoteAppender.hpp  CYLoggerSystemAppender.cpp  CYLoggerSystemAppender.hpp
Src/Entity/Filter/: CYLoggerPatternFilterChain.cpp  CYLoggerPatternFilterChain.hpp  CYLoggerPatternFilterManager.cpp  CYLoggerPatternFilterManager.hpp
Src/Entity/Layout/: CYLoggerTemplateLayout1.cpp  CYLoggerTemplateLayout1.hpp  CYLoggerTemplateLayout2.cpp  CYLoggerTemplateLayout2.hpp  CYLoggerTemplateLayout3.cpp  CYLoggerTemplateLayout3.hpp  CYLoggerTemplateLayoutCustom.cpp  CYLoggerTemplateLayoutCustom.hpp  CYLoggerTemplateLayoutEscape.cpp  CYLoggerTemplateLayoutEscape.hpp  CYLoggerTemplateLayoutManager.cpp  CYLoggerTemplateLayoutManager.hpp  CYLoggertemplateLayoutDefine.hpp
Src/Entity/Schedule/: CYLoggerClearLogFile.cpp  CYLoggerClearLogFile.hpp  CYLoggerDoZipLog.cpp  CYLoggerDoZipLog.hpp  CYLoggerSchedule.cpp  CYLoggerSchedule.hpp  CYLoggerScheduleDefine.hpp
Src/Statistics/: CYStatistics.cpp  CYStatistics.hpp
cmake/: CYLoggerConfig.cmake.in  ios.toolchain.cmake
